--- a/src/apps/lpr_stream/CMakeLists.txt
+++ b/src/apps/lpr_stream/CMakeLists.txt
@@ -8,10 +8,12 @@ file(GLOB SRC "*.cpp")
 add_executable(${COMPONENT_NAME} ${SRC})
 
 target_link_libraries(${COMPONENT_NAME} 
-        onevu_common
+        # onevu_common
         onevu_mqtt
-        onevu_pipeline
+        onevu_detection
+        onevu_trigger
         onevu_stream
+        onevu_pipeline
         )
 
 install(TARGETS ${COMPONENT_NAME} DESTINATION "bin")
