--- a/src/pipeline/CMakeLists.txt
+++ b/src/pipeline/CMakeLists.txt
@@ -1,9 +1,16 @@
 
 set(COMPONENT_NAME onevu_pipeline)
 
-file(GLOB SRC "*.cpp")
+file(GLOB SRC "*.cpp"
+                "node/*.cpp")
 
 add_library(${COMPONENT_NAME} STATIC ${SRC})
+
+target_link_libraries(${COMPONENT_NAME} 
+        onevu_common
+        onevu_trigger
+        onevu_detection
+        )
 
 install(TARGETS ${COMPONENT_NAME}
                 RUNTIME DESTINATION ./
